--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,7 +13,7 @@
           <div class="btn-out">
             <div class="position-relative">
               <a href="/logout">
-                <button type="button" class="btn btn-secondary"><i class="fa-solid fa-right-from-bracket"></i>Sign
+                <button type="button" class="btn btn-secondary" style="margin-top: -5px;"><i class="fa-solid fa-right-from-bracket "></i>Sign
                   Out</button>
               </a>
             </div>
