--- a/views/list.ejs
+++ b/views/list.ejs
@@ -47,7 +47,7 @@
                 <p class="into">s.d.</p>
               </label>
               <div class="col-sm-4">
-                <input type="date" class="form-control" name="enddate" value="<%=query.date%>">
+                <input type="date" class="form-control" name="enddate" value="<%=query.enddate%>">
               </div>
             </div>
             <div class="row mb-3">
